aws-sdk-compile-checks-usage/tests/fails/multiple_clients_one_issue.stderr
error: method `create_global_table` is missing required argument(s): `replication_group`
  --> tests/fails/multiple_clients_one_issue.rs:10:10
   |
10 |         .create_global_table()
   |          ^^^^^^^^^^^^^^^^^^^
